# gym-tracker-v2

./: .env.example  .gitignore  CLAUDE.md  PLANS.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 17a12d0def74_add_workout_tables_and_system_user_.py  3d4d973a9835_add_is_active_to_workout_plans.py  aa3320b4e460_create_users_table.py
backend/app/: config.py  database.py  main.py  seed.py
backend/app/auth/: dependencies.py  jwt.py
backend/app/models/: __init__.py  exercise.py  exercise_set.py  muscle_group.py  plan_exercise.py  session_exercise.py  user.py  workout_plan.py  workout_session.py
backend/app/routes/: admin_exercises.py  admin_muscle_groups.py  auth.py  exercises.py  muscle_groups.py  users.py  workout_plans.py  workout_sessions.py
backend/app/schemas/: auth.py  exercise.py  muscle_group.py  user.py  workout_plan.py  workout_session.py
backend/app/services/: exceptions.py  exercise.py  muscle_group.py  workout_plan.py  workout_session.py
backend/scripts/: lint.sh  test.sh
backend/tests/: conftest.py  test_admin_exercises.py  test_admin_muscle_groups.py  test_auth.py  test_auth_guard.py  test_exercises.py  test_health.py  test_models.py  test_muscle_groups.py  test_seed.py  test_users.py  test_workout_plans.py  test_workout_sessions.py
backend/tests/auth/: test_jwt.py  test_password.py
backend/tests/models/: test_user.py
backend/tests/schemas/: test_auth.py  test_user.py
backend/tests/test_services/: test_exercise_service.py  (+1 more)
docker/: init-db.sh
(+236 files in other folders)
